log_output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-app-service
spec:
  type: ClusterIP
  selector:
    app: log-output-app
  ports:
    - port: 1234
      protocol: TCP
      targetPort: 3000
